# finops-data-stack

./: .dockerignore  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml
.agents/: AGENTS.md  architecture.md  coding-rules.md  project.md  testing.md
.agents/skills/gen-pr/: SKILL.md
.ai/: coding-rules.md
.claude/: settings.json
.claude/agents/: dbt-quality-reviewer.md  pipeline-security-reviewer.md
.claude/skills/dagster-asset/: SKILL.md
.claude/skills/dbt-model/: SKILL.md
.claude/skills/gen-pr/: SKILL.md
.github/: pull_request_template.md
.github/actions/deploy-dagster-to-eks/: action.yml
.github/workflows/: code.yml  dbt.yml  deploy.yml  docker.yml  terraform-ci.yml
docs/: architecture-design.md  data-schema-mapping.md  data-transform-features.md  infrastructure-design.md  ingestion-layer-design.md  ml-architecture-design.md  sagemaker-training-quota-issue.md
infrastructure/helm/: dagster.yaml  values.yaml
infrastructure/terraform/: .terraform.lock.hcl  .tflint.hcl  main.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/bootstrap/: .terraform.lock.hcl  main.tf
infrastructure/terraform/ci/: main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/dev_local/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  variables.tf
scripts/: clean.py  dataset_builder.py  setup_dev.py  trigger_sagemaker_training.py
scripts/historical_backfill/: __init__.py  config.py  gap_log.py  runner.py  writer.py
scripts/historical_backfill/tables/: __init__.py  analyst_reports.py  balance_sheet.py  cashflow_statement.py  commodities_price.py  company_profile.py  corporate_events.py  exchange_rates.py  financial_ratios.py  foreign_trading.py  income_statement.py  index_price_eod.py  insider_transactions.py  interest_rates.py  macro_indicators.py  news_articles.py  proprietary_trading.py  stock_price_eod.py
scripts/sagemaker_smoke_test/: trigger_sagemaker_training.py
scripts/sagemaker_smoke_test/cdk/: app.py  cdk.json  ml_sandbox_stack.py
src/common/: __init__.py  dict_util.py  logger.py  redshift.py  redshift_util.py  s3.py  s3_util.py
src/common/dagster/: __init__.py  decorators.py  hooks.py  metrics.py  utils.py
src/dagster/: __init__.py  dbt_assets.py  dbt_dependency.py  dbt_util.py  ddl_job.py  environment.py  inference_job.py  ingest_job.py  load_job.py  load_job_defs.csv  mart_job_defs.csv  ml_job.py  preprocess.py  resources.py  transform_job.py  transform_job_defs.csv  workspace.py
src/dagster/assets/: __init__.py  ingest_assets.py  load_assets.py  (+2 more)
src/docker/: Dockerfile
src/ingest/: __init__.py
src/load/: __init__.py  ingest_handler.py  load.py  s3_uploader.py
src/ml/: __init__.py  config.py  data_export.py  dataset.py  evaluation.py  forecast_publish.py  inference.py  model.py  requirements.txt  serve.py  train.py  training_job.py
src/redshift/: README.md  ddl_executor.py
src/transform/: .user.yml  README.md  dbt_project.yml  profiles.yml  transform.py
tests/: conftest.py  test_env_setup.py  test_ingest_handler.py  test_placeholder.py  test_transform_assets.py
tests/common/: test_dict_util.py  test_redshift_util.py  test_s3_util.py
tests/dagster/: test_dagster_resources.py  test_dbt_assets.py  test_dbt_dependency.py  test_dbt_util.py  test_ddl_job_.py  test_environment.py  test_inference_job.py  test_ingest_job.py  test_load_job.py  test_load_job_defs.py  test_ml_job.py  test_preprocess.py  test_transform_job.py  test_transform_job_defs.py  test_workspace.py
tests/infrastructure/: test_dagster_yaml.py  test_deploy_composite_action.py  test_deploy_workflow.py  test_docker_workflow.py  test_external_secrets_manifests.py
tests/ingest/: __init__.py  test_analyst_reports_pipeline.py  test_balance_sheet_pipeline.py  test_base_pipeline.py  test_cashflow_statement_pipeline.py  test_commodities_price_pipeline.py  test_company_pipelines.py  test_exchange_rates_pipeline.py  test_finance_pipelines.py  test_financial_ratios_pipeline.py  test_fireant_client.py  test_foreign_trading_pipeline.py  test_income_statement_pipeline.py  test_index_price_eod.py  test_insider_transactions_pipeline.py  test_interest_rates_pipeline.py  test_macro_indicators_pipeline.py  test_news_articles_pipeline.py  test_proprietary_trading_pipeline.py  test_stock_price_eod.py  test_stock_price_eod_pipeline.py  test_trading_pipelines.py  test_world_index_pipelines.py
tests/load/: test_load.py
tests/ml/: test_config.py  test_data_export.py  test_dataset.py  test_evaluation.py  test_forecast_publish.py  test_inference.py  test_model.py  test_serve.py  test_train.py  test_training_job.py
tests/redshift/: ddl_executor_test.py  test_ddl_executor.py  test_forecast_results_ddl.py
(+189 files in other folders)
