[project]
name = "finops-data-stack"
version = "0.1.0"
description = "Automated Data Pipeline for Vietnam Stock Market analysis and valuation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-aws",
    "dagster-dbt",
    "dagster-pandas",
    "dbt-redshift>=1.7.0",
    "vnstock3>=1.0.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "torch>=2.2.0",
    "sagemaker>=2.200.0",
    "numpy>=1.26.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "dagster-graphql",
    "ruff>=0.3.0",
    "ipykernel",
]

[tool.dagster]
module_name = "src.dagster"

[tool.ruff]
line-length = 88
target-version = "py312"
