[project]
name = "finops-data-stack"
version = "0.1.0"
description = "Automated Data Pipeline for Vietnam Stock Market analysis and valuation."
readme = "README.md"
authors = [
    { name = "Data Engineer Team", email = "team@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-aws",
    "dagster-dbt",
    "dagster-pandas",
    "dbt-redshift>=1.7.0",
    "vnstock3>=1.0.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "torch>=2.2.0",
    "sagemaker>=2.200.0",
    "numpy>=1.26.0",
    "mypy-boto3-s3>=1.43.31",
    "more-itertools>=10.8.0",
    "mashumaro>=3.15",
    "dagster-k8s>=0.29.9",
    "dagster-slack>=0.29.9",
    "prometheus-client>=0.25.0",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "dagster-graphql",
    "ruff>=0.3.0",
    "ipykernel",
    "pytest-mock>=3.15.1",
]

[tool.dagster]
module_name = "src.dagster"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
split-on-trailing-comma = true
force-sort-within-sections = false

[tool.ruff.lint.per-file-ignores]
"src/pipeline/dagster/__init__.py" = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
