[project]
name = "finops-data-stack"
version = "0.1.0"
description = "Automated Data Pipeline for Vietnam Stock Market analysis and valuation."
readme = "README.md"
authors = [
    { name = "Vu The Huy", email = "vuthehuy.t61@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster==1.13.10",
    "dagster-aws==0.29.10",
    "dagster-dbt==0.29.10",
    "dagster-pandas==0.29.10",
    "dbt-redshift>=1.11.0rc4",
    "vnstock>=4.0.4",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "urllib3>=2.4.0",
    "numpy>=1.26.0",
    "mypy-boto3-s3>=1.43.31",
    "pyarrow>=17.0.0",
    "more-itertools>=10.8.0",
    "mashumaro>=3.9,<3.15",
    "dagster-k8s==0.29.10",
    "dagster-slack==0.29.10",
    "prometheus-client>=0.25.0",
    "psutil>=7.2.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "dagster-graphql",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "ipykernel",
    "pytest-mock>=3.15.1",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
    "pre-commit>=4.6.0",
]
dagster = [
    "dagster-webserver==1.13.10",
]
ml = [
    "torch>=2.2.0",
    "sagemaker>=3.8.0",
]

[tool.dagster]
module_name = "src.dagster.workspace"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
split-on-trailing-comma = true
force-sort-within-sections = false
known-first-party = ["src"]
known-third-party = ["dagster"]

[tool.ruff.lint.per-file-ignores]
"src/pipeline/dagster/__init__.py" = ["I"]

[tool.uv]
# Force deepdiff>=8.0.0 to fix Critical/High CVEs (#21, #23).
# dbt-common pins deepdiff<8.0 but only uses the DeepDiff class (not Delta),
# which remains API-compatible across the 7→8 boundary.
# Also force dbt-common>=1.37.3 to fix path traversal vulnerability (#22).
override-dependencies = [
    "deepdiff>=8.0.0",
    "dbt-common>=1.37.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The `__fields__` attribute is deprecated:DeprecationWarning",
    "ignore:Class `MultiAssetSensorDefinition` is superseded:dagster.SupersessionWarning",
]
